--- a/src/Nav.css
+++ b/src/Nav.css
@@ -4,8 +4,14 @@
 }
 
 .nav h1 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 400;
     line-height: 2rem;
     cursor: pointer;
+}
+
+@media(min-width: 768px) {
+    .nav h1 {
+        font-size: 1.5rem;
+    }
 }
