--- a/src/Hero.css
+++ b/src/Hero.css
@@ -1,6 +1,6 @@
 .hero {
     width: 100vw;
-    min-height: 65vh ;
+    min-height: 40vh ;
     background: url('./images/plants.png');
     background-position: center;
     background-repeat: no-repeat;
@@ -9,9 +9,18 @@
 }
 
 .hero h1 {
-    font-size: 2.5rem;
+    font-size: 1.4rem;
     width: 70vw;
     color: white;
     margin: auto;
     font-weight: 400;
+}
+
+@media(min-width: 768px) {
+    .hero {
+        min-height: 65vh;
+    }
+    .hero h1 {
+        font-size: 2.5rem;
+    }
 }
