--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -19,12 +19,24 @@
 }
 
 .welcome h1 {
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     font-weight: 400;
 }
 
 .welcome h2 {
     font-family: Exo, sans-serif;
-    font-size: 1.2rem;
-    font-weight: 100;
+    font-size: 0.7rem;
+    font-weight: 50;
+}
+
+@media(min-width: 491px) {
+    .welcome h1 {
+        font-size: 1.8rem;
+        font-weight: 400;
+    }
+    .welcome h2 {
+        font-family: Exo, sans-serif;
+        font-size: 1rem;
+        font-weight: 50;
+    }
 }
