--- a/src/Features.css
+++ b/src/Features.css
@@ -1,5 +1,80 @@
 .features {
-  
-    
+    width: 100vw;
+    min-height: 300vh;
+    background: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
+.text {
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.text p{
+    font-family: Raleway;
+    font-size: 0.7rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+}
+.text h1 {
+    font-size: 1.8rem;
+    font-weight: 400;
+}
+.text h2 {
+    font-family: Exo, sans-serif;
+    font-size: 1rem;
+    font-weight: 50;
+}
+
+.cards {
+    width: 80vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+.card{
+    width: 75%;
+    box-sizing: border-box;
+    border: 2px solid black;
+    margin: 35px;
+    padding: 5px 15px;
+    position: relative;
+}
+
+.card-inner {
+    margin-top:-10%;
+    margin-bottom:-10%;
+    width: 95%;
+    height: 120%;
+    border: 2px solid black;
+    padding: 20px;
+}
+
+.card-inner img {
+    width: 115px;
+}
+.card-inner h1 {
+    font-size: 1rem;
+    font-weight: 400;
+}
+.card-inner h2 {
+    font-family: Exo, sans-serif;
+    font-size: 1rem;
+    font-weight: 50;
+}
+
+@media(min-width: 991px) {
+    .features {
+        min-height: 250vh;
+    }
+    .card {
+        width: 25%;
+    }
+}
