--- a/src/Features.css
+++ b/src/Features.css
@@ -1,17 +1,18 @@
 .features {
     width: 100vw;
-    min-height: 300vh;
     background: #f5f5f5;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    padding: 3rem 0;
 }
 
 .text {
     width: 80vw;
     display: flex;
     flex-direction: column;
+    margin-bottom: 1rem;
 }
 
 .text p{
@@ -42,8 +43,8 @@
 .card{
     width: 75%;
     box-sizing: border-box;
-    border: 2px solid black;
-    margin: 35px;
+    border: none;
+    margin: 50px;
     padding: 5px 15px;
     position: relative;
 }
@@ -70,11 +71,26 @@
     font-weight: 50;
 }
 
+@media(min-width: 491px) {
+
+}
+
+@media(min-width: 768px){
+    .features {
+        
+    }
+    .card {
+        margin: 45px;
+    }
+}
+
 @media(min-width: 991px) {
     .features {
-        min-height: 250vh;
+        
     }
     .card {
         width: 25%;
+        margin: 35px;
+        border: 2px solid black;
     }
 }
