--- a/src/Testimonials.css
+++ b/src/Testimonials.css
@@ -23,7 +23,7 @@
 }
 
 .testimonial-group {
-    width: 60%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,7 +35,7 @@
 }
 
 .testimonial-group h1 {
-    font-size: 1rem;
+    font-size: 0.8rem;
     width: 50%;
 }
 
@@ -55,8 +55,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    width: 450px;
-    height: 450px;
+    width: 375px;
+    height: 375px;
+    margin: 15px 0;
 }
 
 .white {
@@ -73,4 +74,21 @@
     background: #f8f8f8;
     border-radius: 50%;
     align-self: flex-start;
+}
+
+@media (min-width: 491px){
+    .testimonial-group {
+        width: 60%;
+    }
+}
+
+@media (min-width: 768px) {
+    .circle {
+        width: 450px;
+        height: 450px;
+        
+    }
+    .testimonial-group h1 {
+        font-size: 1rem;
+    }
 }
